# pokaylib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  readme.md
assets/: genesect.json  genesect2.json  metang.json
include/: abilities.h  config.h  maps.h  moves.h  pokaylib.h  pokemons.h
src/: main.c  pokaylib.c  pokemonsBW.c
src/maps/: map-Pallet-Town.c
tools/mapscan/: mapscan  mapscan.c  readme.md  tileset-23.css  tileset-29.css
tools/mapscan/done/: ice-path-B1F.css  ice-path-B2F-blackthorn.css  ice-path-B2F-mahogany.css  ice-path-B3F.css
